# casper_excalibur_keyboard_rgb_linux

./: .SRCINFO  .gitignore  CHANGELOG.md  LICENSE  Makefile  PKGBUILD  README.md  benchmark_profiles.py  build-deb.sh  casper-keyboard-rgb.install  install.sh  publish-aur.sh  pyproject.toml  update_pkgbuild.sh
.github/workflows/: ci.yml
casper-keyboard-rgb/: Cargo.toml
casper-keyboard-rgb/src/: core.rs  gui.rs  main.rs
casper_keyboard_rgb/: __init__.py
casper_keyboard_rgb/core/: __init__.py  led_controller.py  profiles.py
casper_keyboard_rgb/gui/: brightness_slider.py  color_picker.py  zone_selector.py
casper_keyboard_rgb/utils/: permission_handler.py
data/: 99-casper-kbd-backlight.rules  led-write-helper  org.casper.keyboard.rgb.policy
driver/: casper-wmi.c  dkms.conf
src/casper_excalibur_keyboard_rgb_linux-1.0.0/: # Code Citations.md  .gitignore  casper-keyboard-rgb.install  install.sh  publish-aur.sh  uninstall.sh
src/casper_excalibur_keyboard_rgb_linux-1.0.0/casper_keyboard_rgb/: __init__.py  main.py
src/casper_excalibur_keyboard_rgb_linux-1.0.0/casper_keyboard_rgb/core/: config.py
src/casper_excalibur_keyboard_rgb_linux-1.0.0/casper_keyboard_rgb/gui/: color_picker.py  main_window.py
src/casper_excalibur_keyboard_rgb_linux-1.0.0/casper_keyboard_rgb/utils/: validator.py
src/casper_excalibur_keyboard_rgb_linux-1.0.0/data/: 99-casper-kbd-backlight.rules  casper-keyboard-rgb.desktop
src/casper_excalibur_keyboard_rgb_linux-1.0.0/driver/: Makefile  casper-wmi.c
src/casper_excalibur_keyboard_rgb_linux-1.0.0/systemd/: casper-keyboard-rgb-restore.service
src/casper_excalibur_keyboard_rgb_linux-1.0.0/tests/: test_config.py  test_led_controller.py
tests/: test_config.py  test_led_controller.py  test_profiles.py  test_validator.py
