[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casper-keyboard-rgb"
version = "1.0.0"
description = "Casper Excalibur Klavye RGB LED Kontrol Aracı"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
]

[project.scripts]
casper-keyboard-rgb = "src.main:main"

[project.urls]
Homepage = "https://github.com/jaeger/casper_excalibur_keyboard_rgb_linux"
Issues = "https://github.com/jaeger/casper_excalibur_keyboard_rgb_linux/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
