[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casper-keyboard-rgb"
version = "1.1.0"
description = "Casper Excalibur Klavye RGB LED Kontrol Aracı"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
]

[project.scripts]
casper-keyboard-rgb = "casper_keyboard_rgb.main:main"

[project.urls]
Homepage = "https://github.com/Jaeger0000/casper_excalibur_keyboard_rgb_linux"
Issues = "https://github.com/Jaeger0000/casper_excalibur_keyboard_rgb_linux/issues"

[tool.setuptools.packages.find]
include = ["casper_keyboard_rgb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.semantic_release]
version_variables = [
    "casper_keyboard_rgb/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = "python -m pip install --upgrade build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.publish]
upload_to_vcs_release = true
